feat: upgrade rollbacks and database stuff